# blender-mcp

./: .env.example  .gitignore  AUTORESEARCH_2026-03-26_INDEX.md  AUTORESEARCH_COMPLETION_SUMMARY.txt  AUTO_LEARNER_GUIDE.md  BLENDER_SKILLS_REFERENCE.md  CAMERA_RESEARCH_INDEX.md  IMPLEMENTATION_SUMMARY.md  NAS-SHARED-DIRS.md  README.md  SCHEDULED_TASK_SKILL.md  TOKEN_OPTIMIZATION.md  V8_SCENE2_INTEGRATION_REPORT.md  VALIDATION_QUICKSTART.md  claude_mcp_config.json  debug_lighting.py  findings.md  fix_addon.py  fix_all_scenes.py  fix_and_render_v3.py  fix_lighting.py  install_addon.sh  migrate-heavy-to-nas.sh  package.json  progress.md  render_v3.py  send_fix_commands.py  setup-blender-mcp-from-nas.sh  setup.sh  task_plan.md
assets/free_models/openx-assets/: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.adoc  REUSE.toml  pyproject.toml
assets/free_models/openx-assets/.devcontainer/: Dockerfile  devcontainer.json
assets/free_models/openx-assets/.github/: FUNDING.yml
assets/free_models/openx-assets/.github/workflows/: buildah-build-devel.yml  release.yml  reuse-check.yml
assets/free_models/openx-assets/containers/: Makefile
assets/free_models/openx-assets/containers/openx-assets-devel/: Dockerfile
assets/free_models/openx-assets/python/openx_assets/: README.md  __init__.py  blender_manifest.toml  cli.py  ops.py  ui_preferences.py  ui_vehicle_info_panel.py  ui_vehicle_menu.py  xosc_utils.py  (+3 more)
assets/free_models/openx-assets/scripts/: autocentrum_scrape.py  xoma2xosc.py  xosc2xoma.py
assets/free_models/openx-assets/xodr/: martinsville.xodr
(+1034 files in other folders)
