[project]
name = "openx-assets"
version = "0.3.0"
authors = [{name="Dogan Ulus", email="dogan.ulus@bogazici.edu.tr" }]
description = "Develop simulation assets using ASAM OpenX standards"
readme = "python/openx_assets/README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
dependencies = [
    "numpy<2", # Ensure compatibility with Blender 4.2 and existing bpy builds
    "bpy>=4.2.0",
    "mathutils"
]
license-files = ["python/openx_assets/LICENSE"]

[project.urls]
"Homepage" = "https://github.com/bounverif/openx_assets/"
"Bug Tracker" = "https://github.com/bounverif/openx_assets/issues"

[project.scripts]
openx-assets = "openx_assets.cli:main"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "python"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["python"]
namespaces = false

[tool.setuptools.package-data]
openx_assets = [
    "schemas/**/*.json"
]
